--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -53,18 +53,18 @@
 	<res-type>javax.sql.DataSource</res-type>
 	<res-auth>Container</res-auth>
   </resource-ref>
-  <!--
+
   <env-entry>
     	<description>URL giving location of the properties file to use for configuration</description>
-  	<env-entry-name>AG_CONFIG</env-entry-name>
+  	<env-entry-name>org.astrogrid.config.url</env-entry-name>
   	<env-entry-type>java.lang.String</env-entry-type>
   </env-entry>
-  -->
+  <!--
   <resource-ref>
   	<res-ref-name>org.astrogrid.config.url</res-ref-name>
 	<res-type>java.lang.String</res-type>
 	<res-auth>Container</res-auth>
   </resource-ref>
-
+-->
 
 </web-app>
