Finished first draft of pal

--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -1,25 +1,68 @@
-##
-##Configuration file for astrogrid datacenter
-##
+####################################################################
+###
+### Configuration file for astrogrid datacenter
+###
+####################################################################
 
 ###
-###Database Configuration
+### Database Configuration
 ###
 
-## DatabaseQuerierClass - Specify the class of database querier to use
-DatabaseQuerierClass=org.astrogrid.datacenter.queriers.mysql.MySqlQuerier
+### Database Querier class to use : REQUIRED
+### The class must be available on the web application classpath, and extend the
+### org.astrogrid.datacenter.queriers.DatabaseQuerier abstract class
+### TODO: abstract class not so good- more versatile if we provide an interface instead.
+### Possible Values
+### * org.astrogrid.datacenter.queriers.sql.SqlQuerier - vanilla SQL querier for JDBC databases. try this first.
+### * org.astrogrid.datacenter.queriers.mysql.MySqlQuerier - SQL querier for MySql Database
+### * org.astrogrid.datacenter.queriers.mssqlserver.MsSqlServerQuerier - SQL querier for Microsoft SQL Server
+### * org.astrogrid.datacenter.queriers.sybase.SybaseQuerier - SQL querier for Sybase
+### * org.astrogrid.datacenter.queriers.hsql.HsqlQuerier - SQL querier for HSQLDB
+### * your own implementation of DatabaseQuerier
+DatabaseQuerierClass=org.astrogrid.datacenter.queriers.sql.SqlQuerier
 
-## Class to perform translation to ADQL
-## used in conjunction with org.astrogrid.datacenter.queriers.sql.SqlQuerier
+
+## ADQL translator class to use: OPTIONAL
+## only used in conjunction with org.astrogrid.datacenter.queriers.sql.SqlQuerier
 ## not required if one of the specialized querier subclasses is being used.
+## Defaults to the vanilla ADQL translator - org.astrogrid.datacenter.queriers.sql.SqlQueryTranslator
 #DatabaseQuerier.AdqlSqlTranslator=
 
-###Connecting to the database. either provide datasource..
-#in
-### or driver, url, username, password and connection parameters.
+
+###
+### Myspace Configuration
+###
+### URL of Default myspace server to use for results : REQUIRED
+### set to 'dummy' to use null-myspace (does this still work?)
+DefaultMySpace=http://uml01.astrogrid.org:8080/axis/services/MySpaceManager
+
+
+###
+### MetaData Configuration
+###
+### location of the metadata file: OPTIONAL
+### disk will first be searched for this file, followed by classpath
+### Defaults to 'metadata.xml'
+#MetadataFile=
+
+###
+### Workspace Configuration
+###
+### Directory for temporary workspace : OPTIONAL
+### leave unspecified to use temporary storage
+###
+WorkspaceDirectory=/tmp
+
+
+
+####################################################################
+###
+### Deprecated Properties - set up in JNDI instead
+###
+###################################################################
 
 ##list of JDBC database drivers to register
-##slightly unsure how this works at present.
+##unsure how this works at present.
 #DatabaseQuerier.JdbcDrivers=
 
 ##JDBC URL to connect to
@@ -31,23 +74,6 @@ DatabaseQuerierClass=org.astrogrid.datacenter.queriers.mysql.MySqlQuerier
 
 ##additional connection properties
 #DatabaseQuerier.ConnectionProperties=
-
-###
-###MetaData Configuration
-###
-
-## location of the metadata file (defaults to metadata.xml)
-## disk will first be searched for this file, followed by classpath
-## defaults to 'metadata.xml'
-#MetadataFile=
-
-###
-###Workspace Configuration
-###
-##directory for local workspace (leave unspecified to use temporary storage).
-WorkspaceDirectory=/tmp
-DefaultMySpace=dummy
-
 
 
 
