Belated CVS update of mySpaceStatus/MySpaceStatusCode and related files.

--- a/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/MySpaceStatusCode.template
+++ b/astrogrid/mySpace/src/java/org/astrogrid/mySpace/mySpaceStatus/MySpaceStatusCode.template
@@ -33,6 +33,8 @@ package org.astrogrid.mySpace.mySpaceStatus;
  * @version Iteration 3.
  */
 
+// ++-- Disclaimer tag --
+
 public class MySpaceStatusCode
 {
 
