Basic datacenter-style querier, now fully integrated so it should when invoked via datacenter framework. Needs a lot of cleaning up and documentation added. May need revision to meet forthcoming datacenter codebase changes.

--- a/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
+++ b/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
@@ -1,4 +1,14 @@
 # -------------------------------------------
+# Host info for where the OGSA-DAI installation can be found
+# CASS123
+HOST_STRING=http://astrogrid.ast.cam.ac.uk:4040
+REGISTRY_STRING=/gdw/services/ogsadai/DAIServiceGroupRegistry
+
+#HYDRA
+#HOST_STRING=http://hydra.star.le.ac.uk:8082
+#REGISTRY_STRING=/gdw/services/ogsadai/DAIServiceGroupRegistry
+
+# -------------------------------------------
 # Location of JVM for shelling out to in Axis version of service
 WAREHOUSE_JVM=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
 
