first stab at adding a self-test framework

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -18,6 +18,12 @@
     </servlet-class>
   </servlet>
 
+ <servlet>
+    <servlet-name>JUnitEETestServlet</servlet-name>
+    <description>JUnitEE test runner</description>
+    <servlet-class>org.junitee.servlet.JUnitEEServlet</servlet-class>
+  </servlet>
+
   <servlet-mapping>
     <servlet-name>AxisServlet</servlet-name>
     <url-pattern>/servlet/AxisServlet</url-pattern>
@@ -28,7 +34,11 @@
     <url-pattern>/services/*</url-pattern>
   </servlet-mapping>
 
-
+ <servlet-mapping>
+    <servlet-name>JUnitEETestServlet</servlet-name>
+    <url-pattern>/TestServlet/*</url-pattern>
+  </servlet-mapping>
+  
     <!-- currently the W3C havent settled on a media type for WSDL;
     http://www.w3.org/TR/2003/WD-wsdl12-20030303/#ietf-draft
     for now we go with the basic 'it's XML' response -->
