Added new dependencies on datacenter and applications following Jeff's changes.

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.11 2003/11/12 18:09:32 jdt Exp $
+# $Id: project.properties,v 1.12 2003/11/27 15:20:10 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -19,7 +19,7 @@ maven.jar.override = on
 #Hardwire the locations of the jars we can't find (yet) in the repository
 maven.jar.policy-client = ${basedir}/lib/astrogrid/policy-client-1.0.jar
 maven.jar.authentication-client = ${basedir}/lib/astrogrid/authentication-client-1.0_JLbugfix.jar
-maven.jar.datacenterdelegates = ${basedir}/lib/astrogrid/datacenterdelegates.jar
+#maven.jar.datacenterdelegates = ${basedir}/lib/astrogrid/datacenterdelegates.jar
 ###########################################################################
 
 # ChangeLog
