finished plugin-refactoring

--- a/astrogrid/datacenter/server/test/java/org/astrogrid/datacenter/queriers/sql/mysql-translations.properties
+++ b/astrogrid/datacenter/server/test/java/org/astrogrid/datacenter/queriers/sql/mysql-translations.properties
@@ -2,7 +2,7 @@
 # warning - sadly the test these results are used in is very space sensitive..
 sample1.xml=SELECT * FROM Tab AS t
 sample2.xml=SELECT t.a, g.d FROM Tab AS a, Tab AS d WHERE a.d < d.e AND a.f < d.f ORDER BY t.f , g.b
-sample3.xml=SELECT t.*, b.* FROM Tab AS t, Bob AS b WHERE t.g <> b.g AND CIRCLE(12.5, 23.0, 5.0) ORDER BY t.g - b.g , b.h
+sample3.xml=SELECT t.*, b.* FROM Tab AS t, Bob AS b WHERE t.g <> b.g AND (2 * ASIN( SQRT(SIN((23.0-t.DEC)/2) * SIN((23.0-t.DEC)/2) +COS(23.0) * COS(t.DEC) * SIN((12.5-t.RA)/2) * SIN((12.5-t.RA)/2)  ))) <5.0 ORDER BY t.g - b.g , b.h
 sample4.xml=SELECT t.b, b.d FROM Tab AS t, Bob AS b HAVING t.b <> b.b
 sample5.xml=SELECT t.b, b.* FROM Tab AS t, Bob AS b WHERE AVG(b.dd ) < 4.56 ORDER BY b.dd
 sample6.xml=SELECT DISTINCT t.b, b.* FROM Tab AS t, Bob AS b WHERE NOT (-(MAX(b.dd ) ) < 4.56 ) GROUP BY t.b HAVING b.x LIKE 'wibble%' OR b.z BETWEEN 4 AND 5 ORDER BY b.dd DESC
