MySpace Tag updated

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -5,7 +5,7 @@ community=<CVS_TAG>
 datacenter=It04-2003-11-21
 jes=Itn04_2003_11_14
 maven-site=<CVS_TAG>
-mySpace=Itn03_end
+mySpace=Itn04_DBBackend
 ogsa=<CVS_TAG>
 portalB=<CVS_TAG>
 registry=<CVS_TAG>
