new example properties file to go with new plugin system

--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -8,18 +8,18 @@
 ### Database Configuration
 ###
 
-### Database Querier class to use : REQUIRED
-### The class must be available on the web application classpath, and extend the
-### org.astrogrid.datacenter.queriers.DatabaseQuerier abstract class
-### TODO: abstract class not so good- more versatile if we provide an interface instead.
+### QuerierSPI class to use : REQUIRED
+### The class must be available on the web application classpath, and implement
+### org.astrogrid.datacenter.queriers.spi.QuerierSPI interface
 ### Possible Values
 ### * org.astrogrid.datacenter.queriers.sql.SqlQuerier - vanilla SQL querier for JDBC databases. try this first.
 ### * org.astrogrid.datacenter.queriers.mysql.MySqlQuerier - SQL querier for MySql Database
 ### * org.astrogrid.datacenter.queriers.mssqlserver.MsSqlServerQuerier - SQL querier for Microsoft SQL Server
 ### * org.astrogrid.datacenter.queriers.sybase.SybaseQuerier - SQL querier for Sybase
 ### * org.astrogrid.datacenter.queriers.hsql.HsqlQuerier - SQL querier for HSQLDB
-### * your own implementation of DatabaseQuerier
-DatabaseQuerierClass=org.astrogrid.datacenter.queriers.sql.SqlQuerier
+### * org.astrogrid.datacenter.queriers.DummyQuerierSPI - dummy querier that always returns the same VOTABLE result.
+### * your own QuerierSPI interface
+QuerierSPI=org.astrogrid.datacenter.queriers.sql.SqlQuerierSPI
 
 
 ## ADQL translator class to use: OPTIONAL
