--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -42,3 +42,6 @@ maven.multiproject.ignoreFailures=true
 maven.multiproject.includes=*/project.xml,implementations/*/project.xml
 #maven.multiproject.includes=**/project.xml
 
+#dashboard
+
+
