--- a/astrogrid/datacenter/server/project.properties
+++ b/astrogrid/datacenter/server/project.properties
@@ -36,6 +36,19 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+maven.javadoc.overview=${basedir}/src/java/org/astrogrid/datacenter/overview.html
+maven.javadoc.customtags=tag1 tag2 tag3 
+tag1.name=todo
+tag1.description=To Do:
+tag1.enabled=true
+tag1.scope=all
+tag2.name=future
+tag2.description=Future:
+tag2.enabled
+tag3.name=modified
+tag3.description=Modified:
+tag3.enabled=true
+tag3.scope=all
 
 #multiproject
 # generate a jar delivable.
