--- a/astrogrid/warehouse/src/java/org/astrogrid/warehouse/service/WarehouseServiceImpl.properties
+++ b/astrogrid/warehouse/src/java/org/astrogrid/warehouse/service/WarehouseServiceImpl.properties
@@ -1,4 +1,9 @@
 # -------------------------------------------
+# Host info for where the OGSA-DAI installation can be found
+HOST_STRING=http://astrogrid.ast.cam.ac.uk:4040
+REGISTRY_STRING=/gdw/services/ogsadai/DAIServiceGroupRegistry
+
+# -------------------------------------------
 # Location of JVM for shelling out to in Axis version of service
 WAREHOUSE_JVM=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
 
