Database changes and script

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -58,8 +58,8 @@ AGJESE00440=:{0}: Failed to inform job scheduler.
 AGJESE00490=:{0}: Failed to parse job schedule request.
 AGJESE00500=:{0}: Job scheduling ultimately failed. See previous messages.
 AGJESE00510=:{0}: Failed to format datacenter run request.
-AGJESE00520=:{0}: Failed to contact datacenter.
-AGJESE00525=:{0}: Failed to contact registry.
+AGJESE00520=:{0}: Failer when contacting application controller.
+AGJESE00525=:{0}: Failed to locate tool.
 
 AGJESE00530=:{0}: Job monitoring ultimately failed. See previous messages.
 AGJESE00540=:{0}: Failed to parse job monitoring request.
@@ -67,21 +67,13 @@ AGJESE00550=:{0}: Failed to contact AstroGrid message log.
 AGJESI00560=:{0}: Job status [{1}] job name [{2}] userid [{3}] community [{4}] job id [{5}] step name [{6}] \
 step number [{7}] step status [{8}] step message [{9}]
 
-AGJESE00600=:{0}: Could not create Catalog from given element.
-AGJESE00610=:{0}: Could not create Query from given element.
-AGJESE00620=:{0}: Could not create Table from given element.
-AGJESE00630=:{0}: Could not create Service from given element.
-
 AGJESE00700=:{0}: Duplicate Job found - Job URN [{1}]
 AGJESE00710=:{0}: Job not found - Job URN [{1}]
 AGJESE00720=:{0}: Jobs not found - with criteria [{1}]
 AGJESE00730=:{0}: JobStep not found for Job with URN [{1}]
-AGJESE00740=:{0}: Duplicate Query found - Job URN [{1}] and JobStep number [{2}]
-AGJESE00750=:{0}: Query not found for Job with URN [{1}] and JobStep number [{2}]
-AGJESE00760=:{0}: Catalog not found for Query in Job with Job URN [{1}] and JobStep number [{2}]
-AGJESE00770=:{0}: Table not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
-AGJESE00780=:{0}: Service not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
-AGJESE00785=:{0}: Location of Datacenter service is missing.
+AGJESE00740=:{0}: Duplicate Tool found - Job URN [{1}] and JobStep number [{2}]
+AGJESE00750=:{0}: Tool not found for Job with URN [{1}] and JobStep number [{2}]
+AGJESE00760=:{0}: Parameter not found for Query in Job with Job URN [{1}] and JobStep number [{2}]
 AGJESE00790=:{0}: Unable to complete find request.
 AGJESE00800=:{0}: Unable to complete update request.
 
