--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -1,5 +1,5 @@
 # Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/,http://www.astrogrid.org/maven-cocoon/
 
 # ChangeLog
 maven.changelog.range=31
