small changes for maven build

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -19,3 +19,9 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+## fork junit - makes classloading more reliable.
+maven.junit.fork=true
+
+#multiproject
+# continue with others if one fails
+maven.multiproject.ignoreFailures=true
