--- a/astrogrid/warehouse/project.properties
+++ b/astrogrid/warehouse/project.properties
@@ -27,3 +27,6 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+
+# Give the WAR a shorter name than the default.
+maven.war.final.name=warehouse.war
