--- a/astrogrid/warehouse/ogsadai/project.properties
+++ b/astrogrid/warehouse/ogsadai/project.properties
@@ -27,3 +27,6 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+
+# When creating an executable jar, use main() from this class.
+maven.javaapp.mainclass=org.astrogrid.warehouse.ogsadai.GdsQueryDelegate
