Quick and dirty hack to get maven producing jar files during nightly build.

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.13 2003/12/05 15:02:01 jdt Exp $
+# $Id: project.properties,v 1.14 2003/12/05 20:15:34 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -15,10 +15,25 @@ maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/De
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
 
-# Deployment
+# Deployment for jar
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
+
+#deployment - settings for artifact / war.
+# see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
+# and http://maven.apache.org/reference/plugins/artifact/examples.html
+maven.repo.list=astrogrid
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
+
+# Nonstandard directory structure
+maven.conf.dir=${basedir}/config
+#these next two should be set by  maven, but aren't
+maven.war.build.dir=${maven.build.dir}
+maven.war.webapp.dir=${maven.war.build.dir}/${pom.artifactId}
 
 #Allow assert keyword
 maven.compile.source = 1.4
