--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -15,6 +15,11 @@ maven.ui.banner.background=#00f
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
+# for the war goal
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
 
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
