Add time and date to report.

--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -36,3 +36,7 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 #multiproject
 # continue with others if one fails
 maven.multiproject.ignoreFailures=true
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
