--- a/astrogrid/templateservice/project.properties
+++ b/astrogrid/templateservice/project.properties
@@ -19,3 +19,6 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
