Add time and date to report.

--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -44,4 +44,7 @@ maven.multiproject.includes=*/project.xml,implementations/*/project.xml
 
 #dashboard
 
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 
