--- a/astrogrid/warehouse/project.properties
+++ b/astrogrid/warehouse/project.properties
@@ -30,3 +30,8 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 
 # Give the WAR a shorter name than the default.
 maven.war.final.name=warehouse.war
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
