--- a/astrogrid/workflow/project.properties
+++ b/astrogrid/workflow/project.properties
@@ -31,3 +31,7 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 #This is the default todo tag used in Eclipse
 maven.tasklist.taskTag=@TODO
 
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
