- added WAR src - added repository location

--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -13,5 +13,20 @@ maven.ui.banner.background=#00f
 
 # Test
 maven.junit.fork=yes
-maven.junit.sysproperties=TEST
-TEST=true
+maven.test.failure.ignore=true
+#maven.junit.sysproperties=TEST
+#TEST=true
+
+# Deployment
+maven.repo.central=www.astrogrid.org
+maven.repo.central.directory=/var/www/www/maven
+maven.remote.group=cvs
+
+maven.repo.list=astrogrid
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
+
+# WAR generation
+maven.war.src=${basedir}/site
