--- a/astrogrid/registry/build.xml
+++ b/astrogrid/registry/build.xml
@@ -2,13 +2,12 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/registry/build.xml,v $</cvs:source>
     | <cvs:author>$Author: KevinBenson $</cvs:author>
-    | <cvs:date>$Date: 2003/12/01 10:38:20 $</cvs:date>
-    | <cvs:version>$Revision: 1.6 $</cvs:version>
+    | <cvs:date>$Date: 2003/12/08 09:30:16 $</cvs:date>
+    | <cvs:version>$Revision: 1.7 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
-    |   Revision 1.6  2003/12/01 10:38:20  KevinBenson
-    |   This should be the results from the merger of Itn04-2003-28-11_HB (Head branch)
-    |   merged with or should say replaced by Itn04-2003-01-12_RB
+    |   Revision 1.7  2003/12/08 09:30:16  KevinBenson
+    |   New result from merger with Itn04-Dec-08_RB tag
     |
     |   Revision 1.3.2.10  2003/12/01 10:25:51  KevinBenson
     |   Added more templates for the client.  So it can do the TabularSky service and 
