--- a/astrogrid/maven-site/deploy/build.xml
+++ b/astrogrid/maven-site/deploy/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id -->
+<!-- $Id: build.xml,v 1.2 2003/12/08 11:06:29 jdt Exp $ -->
 <!--
 	Example Deploy Script for Astrogrid War files
 	This script uses the Tomcat Manager to deploy war files built nightly by Maven
