--- a/astrogrid/applications/test/java/log4j.properties
+++ b/astrogrid/applications/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.1 2003/11/29 00:50:14 pah Exp $
+# $Id: log4j.properties,v 1.2 2003/12/08 15:00:47 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -8,14 +8,12 @@
 #
 # Set root category priority to FATAL and its only appenders to CONSOLE and a logfile LOGFILE.
 # Change OFF to DEBUG for more detailed logging
-log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
-
 
 #### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%t] %c/%L: %m%n
 
 ### File log
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
@@ -23,3 +21,11 @@ log4j.appender.LOGFILE.File=tests.log
 log4j.appender.LOGFILE.Append=FALSE
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
+
+log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
+
+#switch the digester messages down... 
+log4j.logger.org.apache.commons.digester.Digester=OFF
+log4j.logger.org.apache.commons.beanutils=OFF
+log4j.logger.org.apache.axis.utils=OFF
+
