--- a/astrogrid/applications/test/java/log4j.properties
+++ b/astrogrid/applications/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.2 2003/12/08 15:00:47 pah Exp $
+# $Id: log4j.properties,v 1.3 2003/12/08 17:06:35 pah Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -25,7 +25,7 @@ log4j.appender.LOGFILE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
 log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
 #switch the digester messages down... 
-log4j.logger.org.apache.commons.digester.Digester=OFF
-log4j.logger.org.apache.commons.beanutils=OFF
-log4j.logger.org.apache.axis.utils=OFF
+log4j.logger.org.apache.commons.digester.Digester=DEBUG
+log4j.logger.org.apache.commons.beanutils=DEBUG
+log4j.logger.org.apache.axis.utils=DEBUG
 
