added docs for logging and other plugin system

--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -5,10 +5,21 @@
 ####################################################################
 
 ###
-### Database Configuration
+### Plugin Configuration : REQUIRED
+###
+### You must specify a back-end implementation to use. The implementation class
+### may either extend Querier, or implement the QuerierSPI interface. Configuration
+### is different for each case.
 ###
 
-### QuerierSPI class to use : REQUIRED
+### If your implementation extends Querier, specify the full class name here.
+DatabaseQuerier=
+
+### If your implementation implements the QuerierSPI interface, set DatabaseQuerier as follows
+#DatabaseQuerier=
+### and specify the full classname here
+###
+### QuerierSPI class to use
 ### The class must be available on the web application classpath, and implement
 ### org.astrogrid.datacenter.queriers.spi.QuerierSPI interface
 ### Possible Values
@@ -19,7 +30,7 @@
 ### * org.astrogrid.datacenter.queriers.hsql.HsqlQuerier - SQL querier for HSQLDB
 ### * org.astrogrid.datacenter.queriers.DummyQuerierSPI - dummy querier that always returns the same VOTABLE result.
 ### * your own QuerierSPI interface
-QuerierSPI=org.astrogrid.datacenter.queriers.sql.SqlQuerierSPI
+QuerierSPI=org.astrogrid.datacenter.queriers.sql.DummyQuerierSPI
 
 
 ## ADQL translator class to use: OPTIONAL
