Add time and date to report.

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -25,3 +25,7 @@ maven.junit.fork=true
 #multiproject
 # continue with others if one fails
 maven.multiproject.ignoreFailures=true
+
+# Display the date on the Maven web site
+maven.xdoc.date = left
+maven.xdoc.date.format = dd MMMM yyyy HH:mm z
