--- a/astrogrid/warehouse/ogsadai/project.properties
+++ b/astrogrid/warehouse/ogsadai/project.properties
@@ -30,3 +30,6 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 
 # When creating an executable jar, use main() from this class.
 maven.javaapp.mainclass=org.astrogrid.warehouse.ogsadai.GdsQueryDelegate
+
+# Build this kind of thing as the main purpose of this project.
+maven.multiproject.type=javaapp
