The maven.javaapp.jar.name property is set.

--- a/astrogrid/warehouse/ogsadai/project.properties
+++ b/astrogrid/warehouse/ogsadai/project.properties
@@ -33,3 +33,10 @@ maven.javaapp.mainclass=org.astrogrid.warehouse.ogsadai.GdsQueryDelegate
 
 # Build this kind of thing as the main purpose of this project.
 maven.multiproject.type=javaapp
+
+# Name the executable jar with a fixed name: don't include the version of
+# this project.  This is allowable because the executable jar doesn't go
+# in the Maven repository (so doesn't need a version in its name) and
+# desirable because it makes the jar easier to find when included in the
+# WAR built by the parent project.
+maven.javaapp.jar.name=astrogrid-ogsadai-delegates.jar
