--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -1,5 +1,9 @@
+# $Id: project.properties,v 1.7 2003/12/10 12:16:21 jdt Exp $
+
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
+
+maven.license.licenseFile=${basedir}/LICENSE.txt
 
 # ChangeLog
 maven.changelog.range=31
@@ -11,16 +15,46 @@ maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/De
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
 
-# Deployment
+# Deployment for jar
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
+
+#deployment - settings for artifact / war.
+# see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
+# and http://maven.apache.org/reference/plugins/artifact/examples.html
+maven.repo.list=astrogrid
+maven.repo.astrogrid=file:///var/www/www/
+maven.repo.astrogrid.directory=maven
+maven.repo.astrogrid.username=maven
+maven.repo.astrogrid.group=cvs
+
+# Nonstandard directory structure
+maven.conf.dir=${basedir}/config
+#these next two should be set by  maven, but aren't
+maven.war.build.dir=${maven.build.dir}
+maven.war.webapp.dir=${maven.war.build.dir}/${pom.artifactId}
+
+#Allow assert keyword
+maven.compile.source = 1.4
+maven.compile.target = 1.4
+maven.javadoc.source = 1.4
+maven.test.source = 1.4
+
+#This is the default todo tag used in Eclipse
+maven.tasklist.taskTag=@TODO
 
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
 ## fork junit - makes classloading more reliable.
 maven.junit.fork=true
+
+# Checkstyle file
+maven.checkstyle.properties=${basedir}/checkstyle.xml
+
+#javadoc. -- fill this in.
+maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
 
 #multiproject
 # continue with others if one fails
@@ -29,3 +63,4 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
