Finding JVM to shell out to from JAVA_HOME.

--- a/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
+++ b/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
@@ -8,10 +8,16 @@ DatabaseQuerierClass=org.astrogrid.warehouse.queriers.ogsadai.WarehouseQuerier
 XslTransform=http://astrogrid.ast.cam.ac.uk/xslt/ag-warehouse-first.xsl
 
 # -------------------------------------------
-# Location of JVM for shelling out to in Axis version of service
-WarehouseJvm=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
+# Location of JVM for shelling out to GdsQueryDelegate 
+# If using the JVM in tomcat's JAVA_HOME is acceptable, leave this 
+# commented out; only supply it if you want to use a custom JVM 
+# for some reason. 
+# WarehouseJvm=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
 
 # Location of executable jar for shelled-out ogsadai call
+# This relative path should work in tomcat
 ExecutableJarPath=../webapps/warehouse/WEB-INF/classes/
+# You can also use an absolute path, eg:
+#ExecutableJarPath=/export/home/ogsa-dai-tomcat/webapps/warehouse/WEB-INF/classes/
 ExecutableJarName=astrogrid-ogsadai-delegates.jar
 
