For maven to make a war file.

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.7 2003/12/10 12:16:21 jdt Exp $
+# $Id: project.properties,v 1.8 2003/12/10 16:28:56 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
@@ -30,7 +30,7 @@ maven.repo.astrogrid.username=maven
 maven.repo.astrogrid.group=cvs
 
 # Nonstandard directory structure
-maven.conf.dir=${basedir}/config
+maven.conf.dir=${basedir}/configFiles
 #these next two should be set by  maven, but aren't
 maven.war.build.dir=${maven.build.dir}
 maven.war.webapp.dir=${maven.war.build.dir}/${pom.artifactId}
