Added deprecation in java compilation.

--- a/astrogrid/warehouse/project.properties
+++ b/astrogrid/warehouse/project.properties
@@ -4,6 +4,9 @@ maven.repo.remote=http://www.ibiblio.org/maven,http://www.astrogrid.org/maven/, 
 # ChangeLog
 maven.changelog.range=31
 
+# Compilation options
+maven.compile.deprecation=true
+
 # Development process URL
 maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
 
