--- a/astrogrid/warehouse/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/warehouse/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,14 +1,18 @@
-# Set root category priority to INFO and its only appender to CONSOLE.
-log4j.rootCategory=DEBUG, LOGFILE
+# Set root category priority to INFO and its only appender to LOGFILE.
+log4j.rootCategory=INFO, LOGFILE
 
-# Set the enterprise logger category to FATAL and its only appender to CONSOLE.
-log4j.logger.org.apache.axis.enterprise=DEBUG, LOGFILE
+# Set the enterprise logger category to INFO and its only appender to
+# LOGFILE.
+log4j.logger.org.apache.axis.enterprise=INFO, LOGFILE
 
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-#log4j.appender.LOGFILE.File=/export/home/ogsa-dai-tomcat/logs/pal-snapshot.log
-log4j.appender.LOGFILE.File=pal-snapshot.log
+# Absolute path
+#log4j.appender.LOGFILE.File=/export/home/ogsa-dai-tomcat/logs/warehouse.log
+# Relative path for tomcat
+log4j.appender.LOGFILE.File=../logs/warehouse.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.Threshold=INFO
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+
