--- a/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
+++ b/astrogrid/warehouse/src/java/org/astrogrid/warehouse/queriers/ogsadai/WarehouseQuerier.properties
@@ -3,6 +3,16 @@
 DatabaseQuerierClass=org.astrogrid.warehouse.queriers.ogsadai.WarehouseQuerier
 
 # -------------------------------------------
+# Location of OGSA-DAI grid service registry
+#HYDRA
+OgsaDaiHostString=http://hydra.star.le.ac.uk:8082
+OgsaDaiRegistryString=/gdw/services/ogsadai/DAIServiceGroupRegistry
+
+# CASS123
+#OgsaDaiHostString=http://astrogrid.ast.cam.ac.uk:4040
+#gsaDaiRegistryString=/gdw/services/ogsadai/DAIServiceGroupRegistry
+
+# -------------------------------------------
 # Location of XSLT stylesheet for XML RowSet -> VOTable transformation
 # This is a one-size-fits-all hack that will need replacing.
 XslTransform=http://astrogrid.ast.cam.ac.uk/xslt/ag-warehouse-first.xsl
