OGSA-DAI registry now passed in as command-line parameter.  Will remove GdsQueryDelegate.properties file shortly.

--- a/astrogrid/warehouse/ogsadai/src/java/org/astrogrid/warehouse/ogsadai/GdsQueryDelegate.properties
+++ b/astrogrid/warehouse/ogsadai/src/java/org/astrogrid/warehouse/ogsadai/GdsQueryDelegate.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------
-# Host info for where the OGSA-DAI installation can be found
+# Default host info for where the OGSA-DAI installation can be found
 # CASS123
 HOST_STRING=http://astrogrid.ast.cam.ac.uk:4040
 REGISTRY_STRING=/gdw/services/ogsadai/DAIServiceGroupRegistry
