some general tidying

--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -24,6 +24,16 @@ maven.repo.astrogrid.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+#Allow assert keyword
+maven.compile.source = 1.4
+maven.compile.target = 1.4
+maven.javadoc.source = 1.4
+maven.test.source = 1.4
+
+#This is the default todo tag used in Eclipse
+maven.tasklist.taskTag=@TODO
+
+
 ## fork junit - makes classloading more reliable.
 maven.junit.fork=true
 
