--- a/astrogrid/applications/test/java/org/astrogrid/applications/common/config/Test.properties
+++ b/astrogrid/applications/test/java/org/astrogrid/applications/common/config/Test.properties
@@ -1,8 +1,9 @@
-# $Id: Test.properties,v 1.5 2003/12/11 13:23:02 pah Exp $
+# $Id: Test.properties,v 1.6 2003/12/11 14:36:16 pah Exp $
 # control database parameters
 DB_DRIVER=org.hsqldb.jdbcDriver
-DB_URL=jdbc:hsqldb:hsql://localhost:9001
-DB_PASSWORD=veritas
+#DB_URL=jdbc:hsqldb:hsql://localhost:9001
+DB_URL=jdbc:hsqldb:test/data/applications
+DB_PASSWORD=
 DB_USER=sa
 DBCreationScript=/home/pah/ag/src/applications/src/sql/createcontroldb.sql
 #working directory
