--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,5 +1,9 @@
+# $Id: project.properties,v 1.4 2003/12/11 18:56:34 jdt Exp $
+
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+
+maven.license.licenseFile=${basedir}/LICENSE.txt
 
 # ChangeLog
 maven.changelog.range=31
@@ -11,13 +15,32 @@ maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/De
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
 
-# Deployment
+# Deployment for jar
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
 
+#Allow assert keyword
+maven.compile.source = 1.4
+maven.compile.target = 1.4
+maven.javadoc.source = 1.4
+maven.test.source = 1.4
+
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
+
+## fork junit - makes classloading more reliable.
+maven.junit.fork=true
+
+# Checkstyle file
+maven.checkstyle.properties=${basedir}/../maven-site/checkstyle.xml
+
+#javadoc. -- fill this in.
+maven.javadoc.links=http://www.astrogrid.org/maven/build/mySpace/apidocs/,http://www.astrogrid.org/maven/build/jes/apidocs/,http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/,http://jakarta.apache.org/commons/logging/api/
+
+#multiproject
+# continue with others if one fails
+maven.multiproject.ignoreFailures=true
 
 # Display the date on the Maven web site
 maven.xdoc.date = left
