--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.15 2003/12/08 10:03:22 jdt Exp $
+# $Id: project.properties,v 1.16 2003/12/11 18:58:58 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -51,10 +51,10 @@ maven.test.failure.ignore=true
 maven.junit.fork=true
 
 # Checkstyle file
-maven.checkstyle.properties=${basedir}/checkstyle.xml
+maven.checkstyle.properties=${basedir}/../maven-site/checkstyle.xml
 
 #javadoc. -- fill this in.
-maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+maven.javadoc.links=http://www.astrogrid.org/maven/build/mySpace/apidocs/,http://www.astrogrid.org/maven/build/common/apidocs/,http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
 
 #multiproject
 # continue with others if one fails
