--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -50,3 +50,6 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
+#things that do not seem to be set in all contexts
+maven.test.dest=${basedir}/target/test-classes
