Enable assertions during unit tests

--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.4 2003/12/11 18:56:34 jdt Exp $
+# $Id: project.properties,v 1.5 2003/12/14 14:14:39 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
@@ -20,11 +20,12 @@ maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
 
-#Allow assert keyword
+#Allow assert keyword and enable them during unit tests
 maven.compile.source = 1.4
 maven.compile.target = 1.4
 maven.javadoc.source = 1.4
 maven.test.source = 1.4
+maven.junit.jvmargs=-ea
 
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
@@ -45,3 +46,5 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
+
