--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.16 2003/12/11 18:58:58 jdt Exp $
+# $Id: project.properties,v 1.17 2003/12/14 14:14:24 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -35,11 +35,12 @@ maven.conf.dir=${basedir}/config
 maven.war.build.dir=${maven.build.dir}
 maven.war.webapp.dir=${maven.war.build.dir}/${pom.artifactId}
 
-#Allow assert keyword
+#Allow assert keyword and enable them for unit tests
 maven.compile.source = 1.4
 maven.compile.target = 1.4
 maven.javadoc.source = 1.4
 maven.test.source = 1.4
+maven.junit.jvmargs=-ea
 
 #This is the default todo tag used in Eclipse
 maven.tasklist.taskTag=@TODO
