--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -13,10 +13,10 @@
 ###
 
 ### If your implementation extends Querier, specify the full class name here.
-DatabaseQuerier=
+#DatabaseQuerierClass=
 
 ### If your implementation implements the QuerierSPI interface, set DatabaseQuerier as follows
-#DatabaseQuerier=
+DatabaseQuerierClass=org.astrogrid.datacenter.queriers.spi.PluginQuerier
 ### and specify the full classname here
 ###
 ### QuerierSPI class to use
@@ -30,7 +30,7 @@ DatabaseQuerier=
 ### * org.astrogrid.datacenter.queriers.hsql.HsqlQuerier - SQL querier for HSQLDB
 ### * org.astrogrid.datacenter.queriers.DummyQuerierSPI - dummy querier that always returns the same VOTABLE result.
 ### * your own QuerierSPI interface
-QuerierSPI=org.astrogrid.datacenter.queriers.sql.DummyQuerierSPI
+QuerierSPI=org.astrogrid.datacenter.queriers.DummyQuerierSPI
 
 
 ## ADQL translator class to use: OPTIONAL
